Group the GC options into one in the closing AhaSlides poll
G1 NUMA, ZGC and Shenandoah collapse into a single "Non-default GC"
option (9 -> 7 options); live poll updated via AhaSlides, deck notes and
plan doc kept in sync.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JZ8Cv8bTbNhjthwfc1H39D